--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular-project-starter",
+  "name": "rauricoste-room-showcase",
   "version": "0.0.1",
   "description": "",
   "main": "src/main/js/main.js",
@@ -16,6 +16,8 @@
   },
   "dependencies": {
     "angular": "^1.3.16",
-    "angular-route": "^1.3.16"
+    "angular-route": "^1.3.16",
+    "rauricoste-websocket-room-client": "0.0.x",
+    "rauricoste-websocket-room-server": "0.0.x"
   }
 }
