--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "angular": "^1.3.16",
     "angular-route": "^1.3.16",
+    "rauricoste-meta": "0.0.11",
     "rauricoste-websocket-room-client": "0.0.x",
     "rauricoste-websocket-room-server": "0.0.x"
   }
