--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "rauricoste-node-tests": "x"
   },
   "dependencies": {
-    "q": "^1.4.1",
-    "node-static": "^0.7.6",
     "angular": "^1.3.16",
     "angular-route": "^1.3.16",
+    "node-static": "^0.7.6",
+    "q": "^1.4.1",
     "rauricoste-meta": "0.0.11",
+    "rauricoste-webrtc-client": "0.0.x",
     "rauricoste-websocket-room-client": "0.0.x",
     "rauricoste-websocket-room-server": "0.0.x"
   }
